--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,6 @@
 <h1>
   List of all movies
 </h1>
-
 <hr>
 
 <div>
@@ -25,6 +24,9 @@
     </th>
 
     <th>
+      Image URL</th>
+
+    <th>
       Created at
     </th>
 
@@ -37,29 +39,33 @@
   </tr>
 
   <% @movies.each do |movie| %>
-  <tr>
-    <td>
-      <%= movie.id %>
-    </td>
+    <tr>
+      <td>
+        <%= movie.id %>
+      </td>
 
-    <td>
-      <%= movie.title %>
-    </td>
+      <td>
+        <%= movie.title %>
+      </td>
 
-    <td>
-      <%= movie.description %>
-    </td>
+      <td>
+        <%= movie.description %>
+      </td>
 
-    <td>
-      <%= time_ago_in_words(movie.created_at) %> ago
-    </td>
-    <td>
-      <%= time_ago_in_words(movie.updated_at) %> ago
-    </td>
+      <td>
+        <%=movie.image_url%>
+      </td>
 
-    <td>
-      <%= link_to "Show details", movie %>
-    </td>
-  </tr>
+      <td>
+        <%= time_ago_in_words(movie.created_at) %> ago
+      </td>
+      <td>
+        <%= time_ago_in_words(movie.updated_at) %> ago
+      </td>
+
+      <td>
+        <%= link_to "Show details", movie %>
+      </td>
+    </tr>
   <% end %>
 </table>
