--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -34,6 +34,13 @@
       </dd>
 
       <dt>
+      Image URL
+      </dt>
+      <dd>
+      <%= @movie.image_url %>
+      </dd>
+
+      <dt>
         Created at
       </dt>
       <dd>
