--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -12,9 +12,13 @@
     <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
+  <div>
+    <%= form.label :released_on %>
+    <%= form.date_select :released_on %>
+  </div>
 
   <div>
-     <%= form.label :image_url %>
+    <%= form.label :image_url %>
     <%= form.text_area :image_url %>
   </div>
 
