refactored methods in controller to call on before_action, generated Directors scaffold, devise generated users and added verification for navbar on user, authenticated user.

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -14,7 +14,8 @@
     <% @movies.each do |movie| %>
       <div class="col-md-3 mb-3">
 
-        <%= render partial: "movies/movie_card", locals: { movie: movie } %>
+        <!--<%= render partial: "movies/movie", locals: { movie: movie } %>-->
+        <%= render movie %>
       </div>
     <% end %>
   </div>
